fixed mobile view overflow and changed text color of wrap text

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -15,7 +15,9 @@
 
     &_wrap {
       height: 38vh;
-
+      .wrap{
+        color: var(--magenta-purple);
+      }
     }
 
     &_p {
