--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -3,6 +3,7 @@
   position: relative;
   background-color: black;
   z-index: 1;
+  overflow: hidden;
 }
 
 .project h2 {
