--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -89,5 +89,8 @@
             font-size: 10px;
             margin: 10px 0 25px;
         }
+        button{
+            z-index: 1;
+        }
     }
 }
